configured deploy git repo for github pages

--- a/_config.yml
+++ b/_config.yml
@@ -74,3 +74,4 @@ search:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
+  repo: https://github.com/lelerabino/lelerabino.github.io.git
