--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Europe/Rome
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://lele.com
+url: https://lelerabino.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -60,6 +60,15 @@ time_format: HH:mm:ss
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+
+marked:
+  gfm: true
+  pedantic: false
+  sanitize: false
+  tables: true
+  breaks: true
+  smartLists: true
+  smartypants: true
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
