--- a/package.json
+++ b/package.json
@@ -2,22 +2,32 @@
   "name": "lelerabino_blog",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "14.19.3"
+  },
   "hexo": {
-    "version": "3.2.2"
+    "version": "6.2.0"
+  },
+  "scripts": {
+    "build": "hexo generate",
+    "clean": "hexo clean",
+    "deploy": "hexo deploy",
+    "server": "hexo server"
   },
   "dependencies": {
-    "hexo": "^3.2.0",
-    "hexo-deployer-git": "0.2.0",
-    "hexo-generator-archive": "^0.1.4",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "1.2.0",
-    "hexo-generator-index": "^0.2.0",
+    "hexo": "^6.2.0",
+    "hexo-deployer-git": "^3.0.0",
+    "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-category": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
     "hexo-generator-search": "1.0.4",
-    "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
-    "hexo-renderer-scss": "1.0.2",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-generator-tag": "^1.0.0",
+    "hexo-generator-feed": "^3.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^5.0.0",
+    "hexo-renderer-stylus": "^2.1.0",
+    "hexo-renderer-scss": "^1.2.0",
+    "hexo-renderer-swig": "^1.1.0",
+    "hexo-server": "^3.0.0"
   }
 }
